# OpenGLShit

./: .gitignore  CMakeLists.txt  README.md
.cmake/: fetch_libraries.cmake  generate_shaders.cmake
source/: main.c  shaders.h
source/shaders/: fragment_shader.glsl  shaders.c  vertex_shader.glsl
source/util/: types.h
